# CMakeTest

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp  makefile  my_lib.h
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
configured/: config.hpp.in
inc/bits/: stdc++.h
include/bits/: stdc++.h
src/my_lib/: CMakeLists.txt  my_lib.cpp
